--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Webresume In Progress</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home | Jeremy MacRoberts</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <!-- Include Bootstrap Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/bootstrap-icons.css" rel="stylesheet">
 </head>
+<body class="bg-dark text-white">
 
-<body>
-  <main>
-    <h1>Check back for a fully complete resume later</h1>
-  </main>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <!-- Logo as a navbar brand -->
+            <a class="navbar-brand" href="#">
+                <img src="content/suitjeremy.jpg" alt="Logo" class="rounded-circle" style="height: 50px; width: 50px; object-fit: cover;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
+                    </li>
+                </ul>
+
+                <!-- New ul for icons -->
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="tel:+12197795807">>
+                            <img src="content/phone.svg" alt="Phone Link">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mailto:contact@jeremymacroberts.com">>
+                            <img src="content/envelope.svg" alt="Email Link">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/jeremy-macroberts">
+                            <img src="content/linkedin.svg" alt="LinkedIn">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/Armada3334">
+                            <img src="content/github.svg" alt="GitHub">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+        <div class="container my-5">
+            <div class="row">
+                <!-- Column for image -->
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center align-items-center">
+                    <img src="content/suitjeremy.jpg" alt="Jeremy MacRoberts wearing a suit" class="rounded-circle" style="width: 300px; height: 300px; object-fit: cover;">
+                </div>
+    
+                <!-- Column for about me text -->
+                <div class="col-lg-8 col-md-6">
+                    <h2>About Me</h2>
+                    <p>
+                        <!-- Your about me text goes here -->
+                        Hello! I'm Jeremy. I'm a skilled Network Engineer and Penetration tester, with a bit of knowledge in just about everything. I'm a quick learner and I love to learn new things. I'm currently working on my Bachelor's degree in Cybersecurity. I'm also working on my OSCP certification. I'm a hard worker and I'm always looking for new opportunities to learn and grow.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <h1>Resume</h1>
+        <embed src="files/resume.pdf" type="application/pdf" width="100%" height="800px" />
+    </main>
+
+    <footer class="">
+        <!-- Footer content goes here -->
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
-
 </html>
