--- a/src/blog.html
+++ b/src/blog.html
@@ -71,7 +71,7 @@
             <!-- Example Blog Post -->
             <div class="col-md-4 mb-4">
                 <div class="card bg-dark text-white">
-                    <img src="content/resumepost.png" class="card-img-top" alt="Blog Post Image">
+                    <img src="content/resumecode.png" class="card-img-top" alt="Blog Post Image">
                     <div class="card-body">
                         <h5 class="card-title">My Webresume</h5>
                         <p class="card-text">To show my skills properly, I've created a web resume as a showcase for projects and things about myself.</p>
